--- a/.gitignore
+++ b/.gitignore
@@ -115,3 +115,6 @@ modules.xml
 .idea/sonarlint
 
 # End of https://www.toptal.com/developers/gitignore/api/go,intellij+all
+
+contacts.json
+groups.json
